# fp-gpt2

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  eval.py  inference.py  model.py  train.py  utils.py
tests/: conftest.py  test_model.py
